# uptown-boy

./: .clang_complete  CMakeLists.txt
honeycrisp/: CMakeLists.txt
honeycrisp/src/honeycrisp/: honeycrisp.h
honeycrisp/src/honeycrisp/2d/: camera.cpp  camera.h  node.h  point.h  scene.cpp  scene.h  sprite.cpp  sprite.h  spritesheet.h  surface.cpp  surface.h  vector.h  vector.inl
honeycrisp/src/honeycrisp/2d/actions/: action.h  moveby.h  sequence.h
honeycrisp/src/honeycrisp/2d/geometry/: point.h  rect.h
honeycrisp/src/honeycrisp/base/: config.h  game.cpp  game.h  game_config.h  game_context.h  gameobject.h  macros.h  sdl.h  singleton.h  thread.cpp  thread.h  timer.cpp  timer.h
honeycrisp/src/honeycrisp/controllers/: controller.h  gamepad.h  keyboard.h
honeycrisp/src/honeycrisp/entities/: entity.h
honeycrisp/src/honeycrisp/renderer/: drawable.h  loaderparams.h  texture.cpp  texture.h  texturemanager.cpp  texturemanager.h
honeycrisp/src/honeycrisp/utils/: logging.h  utils.h
src/: main.cpp
tools/: build.sh  formatter.sh
